--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -15,7 +15,8 @@ libosux_util_la_SOURCES = \
 	md5.c md5.h \
 	string2.c string2.h
 
-libosux_util_la_CFLAGS = $(YAML_CFLAGS) $(AM_CFLAGS) $(CRYPTO_CFLAGS)
-libosux_util_la_LDFLAGS = $(YAML_LIBS) $(AM_LDFLAGS) $(CRYPTO_LIBS)
+libosux_util_la_CFLAGS = $(CRYPTO_CFLAGS) $(AM_CFLAGS)
+libosux_util_la_LDFLAGS = $(CRYPTO_LIBS) $(AM_LDFLAGS)
+libosux_util_la_LIBADD = ../thirdparty/libyaml/src/libyaml.la
 
 dist_python_DATA = osux_util.py
