--- a/src/beatmap/parser/Makefile.am
+++ b/src/beatmap/parser/Makefile.am
@@ -6,5 +6,5 @@ noinst_LTLIBRARIES =  libosux_parser.la
 libosux_parser_la_SOURCES = parser.c parser.h
 
 libosux_parser_la_CFLAGS = $(AM_CFLAGS) -DPKG_LIB_DIR=\"$(pkglibdir)\"
-libosux_parser_la_LDFLAGS = $(AM_LDFLAGS) -ldl
+libosux_parser_la_LDFLAGS = $(AM_LDFLAGS)
 
