--- a/src/beatmap/parser/parser_py/Makefile.am
+++ b/src/beatmap/parser/parser_py/Makefile.am
@@ -4,11 +4,11 @@ dist_python_DATA = osux_parse.py
 
 pkglib_LTLIBRARIES = libosux_parser_py.la
 
-libosux_parser_py_la_SOURCES = pyfetch.c pyfetch.h python.c python.h
+libosux_parser_py_la_SOURCES = pyfetch.c pyfetch.h python_.c python_.h
 
-libosux_parser_py_la_CFLAGS = $(PYTHON2_CFLAGS) $(AM_CFLAGS) \
+libosux_parser_py_la_CFLAGS = $(AM_CFLAGS) $(PYTHON2_CFLAGS) \
 				-DPYTHON_PATH=\"$(pythondir)\"
-
-libosux_parser_py_la_LDFLAGS = -avoid-version -module -shared \
-				-export-dynamic $(PYTHON2_LIBS)
+				
+libosux_parser_py_la_LDFLAGS = -avoid-version -module -shared -fPIC\
+				-export-dynamic -no-undefined $(AM_LDFLAGS) $(PYTHON2_LIBS)
 
