--- a/src/util/Makefile.am
+++ b/src/util/Makefile.am
@@ -9,14 +9,12 @@ libosux_util_la_SOURCES = \
 	stack.c stack.h \
 	yaml2.c yaml2.h \
 	uleb128.c uleb128.h \
-	re.c re.h \
 	sum.c sum.h \
 	data.c data.h \
 	md5.c md5.h \
 	string2.c string2.h
 
-libosux_util_la_CFLAGS = $(CRYPTO_CFLAGS) $(AM_CFLAGS)
-libosux_util_la_LDFLAGS = $(CRYPTO_LIBS) $(AM_LDFLAGS)
-libosux_util_la_LIBADD = ../thirdparty/libyaml/src/libyaml.la
+libosux_util_la_CFLAGS = $(CRYPTO_CFLAGS) $(YAML_CFLAGS) $(AM_CFLAGS)
+libosux_util_la_LDFLAGS = $(CRYPTO_LIBS) $(YAML_LIBS) $(AM_LDFLAGS)
 
 dist_python_DATA = osux_util.py
