--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/common.mk
 
-bin_PROGRAMS = makedb readdb parse_replay
+bin_PROGRAMS = makedb readdb parse_replay taiko_converter
 
 makedb_SOURCES = makedb.c
 makedb_LDADD = ../lib/libosux.la
@@ -11,5 +11,6 @@ readdb_LDADD = ../lib/libosux.la
 parse_replay_SOURCES = parse_replay.c
 parse_replay_LDADD = ../lib/libosux.la
 
-
+taiko_converter_SOURCES = taiko_converter.c
+taiko_converter_LDADD = ../lib/libosux.la
 
