Cmake build system

--- a/src/lib/beatmap/CMakeLists.txt
+++ b/src/lib/beatmap/CMakeLists.txt
@@ -4,19 +4,10 @@ add_subdirectory(parser)
 
 set(BM_SOURCE
   beatmap.c
-  beatmap.h
   color.c
-  color.h
   hitobject.c
-  hitobject.h
-  hitsound.h
   storyboard.c
-  storyboard.h
   timingpoint.c
-  timingpoint.h
-  taiko_autoconvert.c
-  taiko_autoconvert.h )
+  taiko_autoconvert.c )
 
-
-add_library(osux_bm STATIC ${BM_SOURCE})
-target_link_libraries(osux_bm osux_parser)
+add_library(osux_bm OBJECT ${BM_SOURCE})
