--- a/src/lib/beatmap/parser/CMakeLists.txt
+++ b/src/lib/beatmap/parser/CMakeLists.txt
@@ -3,7 +3,5 @@
 add_subdirectory(parser_py)
 add_subdirectory(parser_c)
 
-set(PARSER_SRC parser.c parser.h)
-
-add_library(osux_parser STATIC ${PARSER_SRC})
-target_link_libraries(osux_parser ${CMAKE_DL_LIBS})
+set(PARSER_SRC parser.c)
+add_library(osux_parser OBJECT ${PARSER_SRC})
