--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
 
 set(PKG_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/${CMAKE_PROJECT_NAME}")
@@ -9,47 +10,33 @@ add_definitions(
   -DPKG_DATA_DIR="${PKG_DATA_DIR}"
   -DPKG_CONFIG_DIR="${PKG_CONFIG_DIR}"
   -DPKG_LIB_DIR="${PKG_LIB_DIR}"
-  -DPYTHON_PATH="${PYTHON_PATH}")
+  -DPYTHON_PATH="${PYTHON_PATH}"
+  -DMODULE_LOAD_PATH="${PKG_LIB_DIR}")
 
 
 set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_RPATH}:\$ORIGIN/../lib/osux")
 
-# if (NOT DEFINED CMAKE_ENABLE_C99)
-#    set(CMAKE_ENABLE_C99 "-std=gnu99")
-# endif(NOT DEFINED CMAKE_ENABLE_C99)
+set(Python_ADDITIONAL_VERSIONS "2.7")
 
-#set(CMAKE_C_FLAGS "${CMAKE_ENABLE_C99} -Wall -Wl,-Xld -Wl,--disable-new-dtags")
-
-enable_testing()
-
+find_package(PythonLibs REQUIRED)
+find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
+find_package(GLIB COMPONENTS gmodule REQUIRED )
 find_package(GTS REQUIRED)
+find_package(LibLZMA REQUIRED)
+find_package(LibYAML REQUIRED)
+find_package(SQLite3 REQUIRED)
+find_package(OpenMP)
 
-find_package(LibLZMA)
-find_package(LibYAML)
-
-include_directories(${OPENSSL_INCLUDE_DIR})
-include_directories(include)
-include_directories(.)
+include_directories(include
+  ${GLIB_INCLUDE_DIRS}
+  ${PYTHON_INCLUDE_DIRS}
+  ${OPENSSL_INCLUDE_DIR})
 
 add_subdirectory(thirdparty)
-add_subdirectory(util)
-add_subdirectory(beatmap)
-add_subdirectory(database)
-add_subdirectory(editor)
-add_subdirectory(mod)
-add_subdirectory(replay)
-
-add_library(osux STATIC dummy.c)
-target_link_libraries(osux osux_bm osux_db osux_replay osux_util)
-
+add_subdirectory(lib)
+add_subdirectory(tools)
 add_subdirectory(taikorank)
-
-
-
-# stackoverflow.com/questions/8934295/
-#  add-source-in-a-subdirectory-to-a-cmake-project
-# http://www.cmake.org/Wiki/CMake/Editors/Emacs
 
