--- a/src/taikorank/test/yaml/test_other.yaml
+++ b/src/taikorank/test/yaml/test_other.yaml
@@ -4,7 +4,7 @@ tests:
     do: True
     path: "./maps_test/other/obj/"
     field: "final_star"
-    maps: |
+    expected: |
       160bpm 1/4[1024 obj]
       160bpm 1/4[768 obj]
       160bpm 1/4[512 obj]
@@ -22,7 +22,7 @@ tests:
     do: True
     path: "./maps_test/other/density_pattern/pack_1/"
     field: "final_star"
-    maps: |
+    expected: |
       160bpm 256obj[ddkd ddkd ddkd ddkd]
       160bpm 256obj[ddkd ddk_ ddkd ddk_]
       160bpm 256obj[ddk_ ddk_ ddk_ ddk_]
@@ -36,7 +36,7 @@ tests:
     do: True
     path: "./maps_test/other/density_pattern/pack_2/"
     field: "final_star"
-    maps: |
+    expected: |
       160bpm 256obj[ddkd ddkd ddkd ddkd]
       160bpm 256obj[ddkd ddk_ ddkd ddk_]
       160bpm 256obj[ddkd_ddk_ d_k_ d_k_]
