--- a/src/taikorank/test/yaml/test_reading.yaml
+++ b/src/taikorank/test/yaml/test_reading.yaml
@@ -4,7 +4,7 @@ tests:
     do: True
     path: "./maps_test/reading/no_hide/"
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[1000bpma]
       40bpm 1/4[800bpma]
       40bpm 1/4[600bpma]
@@ -34,7 +34,7 @@ tests:
     path: "./maps_test/reading/no_hide/*100bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[100bpma](HD FL )
       40bpm 1/4[100bpma](HR FL )
       40bpm 1/4[100bpma](FL )
@@ -48,7 +48,7 @@ tests:
     path: "./maps_test/reading/no_hide/*120bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[120bpma](HD FL )
       40bpm 1/4[120bpma](HR FL )
       40bpm 1/4[120bpma](FL )
@@ -62,7 +62,7 @@ tests:
     path: "./maps_test/reading/no_hide/*140bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[140bpma](HD FL )
       40bpm 1/4[140bpma](HR FL )
       40bpm 1/4[140bpma](FL )
@@ -76,7 +76,7 @@ tests:
     path: "./maps_test/reading/no_hide/*150bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[150bpma](HD FL )
       40bpm 1/4[150bpma](HR FL )
       40bpm 1/4[150bpma](FL )
@@ -90,7 +90,7 @@ tests:
     path: "./maps_test/reading/no_hide/*160bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[160bpma](HD FL )
       40bpm 1/4[160bpma](HR FL )
       40bpm 1/4[160bpma](FL )
@@ -104,7 +104,7 @@ tests:
     path: "./maps_test/reading/no_hide/*170bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[170bpma](HD FL )
       40bpm 1/4[170bpma](HR FL )
       40bpm 1/4[170bpma](FL )
@@ -118,7 +118,7 @@ tests:
     path: "./maps_test/reading/no_hide/*175bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[175bpma](HD FL )
       40bpm 1/4[175bpma](HR FL )
       40bpm 1/4[175bpma](FL )
@@ -132,7 +132,7 @@ tests:
     path: "./maps_test/reading/no_hide/*180bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[180bpma](HD FL )
       40bpm 1/4[180bpma](HR FL )
       40bpm 1/4[180bpma](FL )
@@ -146,7 +146,7 @@ tests:
     path: "./maps_test/reading/no_hide/*185bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[185bpma](HD FL )
       40bpm 1/4[185bpma](HR FL )
       40bpm 1/4[185bpma](FL )
@@ -160,7 +160,7 @@ tests:
     path: "./maps_test/reading/no_hide/*190bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[190bpma](HD FL )
       40bpm 1/4[190bpma](HR FL )
       40bpm 1/4[190bpma](FL )
@@ -174,7 +174,7 @@ tests:
     path: "./maps_test/reading/no_hide/*200bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[200bpma](HD FL )
       40bpm 1/4[200bpma](HR FL )
       40bpm 1/4[200bpma](FL )
@@ -188,7 +188,7 @@ tests:
     path: "./maps_test/reading/no_hide/*240bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[240bpma](HD FL )
       40bpm 1/4[240bpma](HR FL )
       40bpm 1/4[240bpma](FL )
@@ -202,7 +202,7 @@ tests:
     path: "./maps_test/reading/no_hide/*280bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[280bpma](HD FL )
       40bpm 1/4[280bpma](HR FL )
       40bpm 1/4[280bpma](FL )
@@ -216,7 +216,7 @@ tests:
     path: "./maps_test/reading/no_hide/*320bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[320bpma](HD FL )
       40bpm 1/4[320bpma](HR FL )
       40bpm 1/4[320bpma](FL )
@@ -230,7 +230,7 @@ tests:
     path: "./maps_test/reading/no_hide/*360bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[360bpma](HD FL )
       40bpm 1/4[360bpma](HR FL )
       40bpm 1/4[360bpma](FL )
@@ -244,7 +244,7 @@ tests:
     path: "./maps_test/reading/no_hide/*400bpma*.osu"
     mods: ['__', 'FL', 'HD', 'HR', 'HRFL', 'HDFL', 'EZ']
     field: "reading_star"
-    maps: |
+    expected: |
       40bpm 1/4[400bpma](HD FL )
       40bpm 1/4[400bpma](HR FL )
       40bpm 1/4[400bpma](FL )
@@ -257,7 +257,7 @@ tests:
     do: True
     path: "./maps_test/reading/hide/"
     field: "reading_star"
-    maps: |
+    expected: |
       160bpm[160bpma 1/16]
       160bpm[160bpma 1/12]
       160bpm[160bpma 1/8]
