--- a/src/taikorank/test/yaml/test_density.yaml
+++ b/src/taikorank/test/yaml/test_density.yaml
@@ -4,6 +4,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/by_2/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm dd__ ____]
       256 objects[180bpm d_d_ ____]
@@ -14,6 +16,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/by_3/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm ddd_ ____]
       256 objects[180bpm d_d_ d___]
@@ -23,6 +27,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/by_4/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm dddd ____]
       256 objects[180bpm ddd_ d___]
@@ -33,6 +39,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/by_5/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm dddd d___]
       256 objects[180bpm ddd_ d_d_]
@@ -42,6 +50,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/by_6/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm dddd dd__]
       256 objects[180bpm dddd d_d_]
@@ -52,6 +62,8 @@ tests:
     do: True
     path: "./maps_test/density/256_obj/grouped/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       256 objects[180bpm dddd dddd]
       256 objects[180bpm dddd ddd_]
@@ -66,6 +78,8 @@ tests:
     do: True
     path: "./maps_test/density/ddddkkkk_strain/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       bpm bundle[200bpm ddddkkkk]
       bpm bundle[180bpm ddddkkkk]
@@ -81,6 +95,8 @@ tests:
     do: True
     path: "./maps_test/density/ddkk_strain/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       bpm bundle[200bpm ddkkddkk]
       bpm bundle[180bpm ddkkddkk]
@@ -96,6 +112,8 @@ tests:
     do: True
     path: "./maps_test/density/dk_strain/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       bpm bundle[200bpm dkdkdkdk]
       bpm bundle[180bpm dkdkdkdk]
@@ -111,6 +129,121 @@ tests:
     do: True
     path: "./maps_test/density/d_strain/"
     field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
+    expected: |
+      bpm bundle[800bpm dddddddd]
+      bpm bundle[720bpm dddddddd]
+      bpm bundle[600bpm dddddddd]
+      bpm bundle[560bpm dddddddd]
+      bpm bundle[520bpm dddddddd]
+      bpm bundle[480bpm dddddddd]
+      bpm bundle[440bpm dddddddd]
+      bpm bundle[400bpm dddddddd]
+      bpm bundle[360bpm dddddddd]
+      bpm bundle[320bpm dddddddd]
+      bpm bundle[300bpm dddddddd]
+      bpm bundle[280bpm dddddddd]
+      bpm bundle[260bpm dddddddd]
+      bpm bundle[240bpm dddddddd]
+      bpm bundle[220bpm dddddddd]
+      bpm bundle[200bpm dddddddd]
+      bpm bundle[180bpm dddddddd]
+      bpm bundle[160bpm dddddddd]
+      bpm bundle[140bpm dddddddd]
+      bpm bundle[120bpm dddddddd]
+      bpm bundle[100bpm dddddddd]
+      bpm bundle[80bpm dddddddd]
+      bpm bundle[60bpm dddddddd]
+      bpm bundle[40bpm dddddddd]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/density/d_strain/x2/"
+    field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
+    expected: |
+      bpm bundle[800bpm dddddddd x2]
+      bpm bundle[720bpm dddddddd x2]
+      bpm bundle[600bpm dddddddd x2]
+      bpm bundle[560bpm dddddddd x2]
+      bpm bundle[520bpm dddddddd x2]
+      bpm bundle[480bpm dddddddd x2]
+      bpm bundle[440bpm dddddddd x2]
+      bpm bundle[400bpm dddddddd x2]
+      bpm bundle[360bpm dddddddd x2]
+      bpm bundle[320bpm dddddddd x2]
+      bpm bundle[300bpm dddddddd x2]
+      bpm bundle[280bpm dddddddd x2]
+      bpm bundle[260bpm dddddddd x2]
+      bpm bundle[240bpm dddddddd x2]
+      bpm bundle[220bpm dddddddd x2]
+      bpm bundle[200bpm dddddddd x2]
+      bpm bundle[180bpm dddddddd x2]
+      bpm bundle[160bpm dddddddd x2]
+      bpm bundle[140bpm dddddddd x2]
+      bpm bundle[120bpm dddddddd x2]
+      bpm bundle[100bpm dddddddd x2]
+      bpm bundle[80bpm dddddddd x2]
+      bpm bundle[60bpm dddddddd x2]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/pattern/group_pattern/xxxxx___/"
+    field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
+    expected: |
+      160bpm[ddddd___ ddddd___]
+      160bpm[ddddk___ ddddk___]
+      160bpm[dkddk___ dkddk___]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/pattern/group_pattern/x_x_xxx_/"
+    field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
+    expected: |
+      160bpm[d_d_ddd_ d_d_ddd_]
+      160bpm[d_d_ddk_ d_d_ddk_]
+      160bpm[d_k_ddk_ d_k_ddk_]
+  #########################################################
+combined:
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/density/ddddkkkk_strain/ ./maps_test/density/ddkk_strain/"
+    field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
+    expected: |
+      bpm bundle[200bpm ddddkkkk]
+      bpm bundle[200bpm ddkkddkk]
+      bpm bundle[180bpm ddddkkkk]
+      bpm bundle[180bpm ddkkddkk]
+      bpm bundle[160bpm ddddkkkk]
+      bpm bundle[160bpm ddkkddkk]
+      bpm bundle[140bpm ddddkkkk]
+      bpm bundle[140bpm ddkkddkk]
+      bpm bundle[120bpm ddddkkkk]
+      bpm bundle[120bpm ddkkddkk]
+      bpm bundle[100bpm ddddkkkk]
+      bpm bundle[100bpm ddkkddkk]
+      bpm bundle[80bpm ddddkkkk]
+      bpm bundle[80bpm ddkkddkk]
+      bpm bundle[60bpm ddddkkkk]
+      bpm bundle[60bpm ddkkddkk]
+      bpm bundle[40bpm ddddkkkk]
+      bpm bundle[40bpm ddkkddkk]
+  #########################################################
+  -
+    do: True
+    path: "./maps_test/density/d_strain/ ./maps_test/density/d_strain/x2/"
+    field: "density_star"
+    mods: ['__', 'DT', 'HT']
+    merge_mods: False
     expected: |
       bpm bundle[800bpm dddddddd x2]
       bpm bundle[800bpm dddddddd]
@@ -159,48 +292,4 @@ tests:
       bpm bundle[60bpm dddddddd x2]
       bpm bundle[60bpm dddddddd]
       bpm bundle[40bpm dddddddd]
-  #########################################################
-  -
-    do: True
-    path: "./maps_test/pattern/group_pattern/xxxxx___/"
-    field: "density_star"
-    expected: |
-      160bpm[ddddd___ ddddd___]
-      160bpm[ddddk___ ddddk___]
-      160bpm[dkddk___ dkddk___]
-  #########################################################
-  -
-    do: True
-    path: "./maps_test/pattern/group_pattern/x_x_xxx_/"
-    field: "density_star"
-    expected: |
-      160bpm[d_d_ddd_ d_d_ddd_]
-      160bpm[d_d_ddk_ d_d_ddk_]
-      160bpm[d_k_ddk_ d_k_ddk_]
-  #########################################################
-combined:
-  #########################################################
-  -
-    do: True
-    path: "./maps_test/density/ddddkkkk_strain/ ./maps_test/density/ddkk_strain/"
-    field: "density_star"
-    expected: |
-      bpm bundle[200bpm ddddkkkk]
-      bpm bundle[200bpm ddkkddkk]
-      bpm bundle[180bpm ddddkkkk]
-      bpm bundle[180bpm ddkkddkk]
-      bpm bundle[160bpm ddddkkkk]
-      bpm bundle[160bpm ddkkddkk]
-      bpm bundle[140bpm ddddkkkk]
-      bpm bundle[140bpm ddkkddkk]
-      bpm bundle[120bpm ddddkkkk]
-      bpm bundle[120bpm ddkkddkk]
-      bpm bundle[100bpm ddddkkkk]
-      bpm bundle[100bpm ddkkddkk]
-      bpm bundle[80bpm ddddkkkk]
-      bpm bundle[80bpm ddkkddkk]
-      bpm bundle[60bpm ddddkkkk]
-      bpm bundle[60bpm ddkkddkk]
-      bpm bundle[40bpm ddddkkkk]
-      bpm bundle[40bpm ddkkddkk]
   #########################################################
