--- a/src/taikorank/test/yaml/test_reading.yaml
+++ b/src/taikorank/test/yaml/test_reading.yaml
@@ -4,6 +4,8 @@ tests:
     do: True
     path: "./maps_test/reading/no_hide/"
     field: "reading_star"
+    mods: ['__', 'DT', 'HT', 'HR', 'FL']
+    merge_mods: False
     expected: |
       40bpm 1/4[1000bpma]
       40bpm 1/4[800bpma]
