bugfixes + gnu build system

--- a/src/lib/beatmap/Makefile.am
+++ b/src/lib/beatmap/Makefile.am
@@ -1,22 +1,15 @@
 include $(top_srcdir)/common.mk
 
-SUBDIRS = parser
 
 noinst_LTLIBRARIES= libosux_beatmap.la
 libosux_beatmap_la_SOURCES = \
 	beatmap.c \
-	beatmap.h \
+	beatmap_old.c \
+	beatmap_variable.c \
+	event.c \
+	util.c \
 	color.c \
-	color.h \
 	hitobject.c \
-	hitobject.h \
 	hitsound.h \
-	storyboard.c \
-	storyboard.h \
 	timingpoint.c \
-	timingpoint.h \
-	taiko_autoconvert.c \
-	taiko_autoconvert.h
-
-libosux_beatmap_la_LIBADD = \
-	parser/libosux_parser.la
+	taiko_autoconvert.c
