--- a/src/lib/util/Makefile.am
+++ b/src/lib/util/Makefile.am
@@ -7,12 +7,12 @@ libosux_util_la_SOURCES = \
 	list.c list.h \
 	split.c split.h \
 	stack.c stack.h \
-	yaml2.c yaml2.h \
+	yaml.c yaml2.h \
 	uleb128.c uleb128.h \
 	sum.c sum.h \
 	data.c data.h \
 	md5.c md5.h \
-	string2.c string2.h
+	str.c string2.h
 
 libosux_util_la_CFLAGS = $(CRYPTO_CFLAGS) $(YAML_CFLAGS) $(AM_CFLAGS)
 libosux_util_la_LDFLAGS = $(CRYPTO_LIBS) $(YAML_LIBS) $(AM_LDFLAGS)
