--- a/src/lib/database/CMakeLists.txt
+++ b/src/lib/database/CMakeLists.txt
@@ -1,13 +1,17 @@
 
+
+
 add_custom_command(
-  OUTPUT _db_sql_data.c
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/db.sql db.sql
-  COMMAND ${PROJECT_SOURCE_DIR}/scripts/embedder.py db.sql > _db_sql_data.c
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/db.sql
-  COMMENT "generate c code to dump a file in executable"
+  OUTPUT beatmap_db.sql.c beatmap_db.sql.h
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/beatmap_db.sql beatmap_db.sql
+  COMMAND ${PROJECT_SOURCE_DIR}/scripts/embedder2.py beatmap_db.sql
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/beatmap_db.sql
+  COMMENT "embedding beatmap schema; generating c code"
   )
 
-add_custom_target(generate_sql_c DEPENDS _db_sql_data.c)
-set(DB_SOURCE _db_sql_data.c osux_db.c)
+add_custom_target(generate_sql_c DEPENDS beatmap_db.sql.c beatmap_db.sql.h)
+set(DB_SOURCE beatmap_db.sql.c database.c beatmap_database.c)
+
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_library(osux_db OBJECT ${DB_SOURCE})
 add_dependencies(osux_db generate_sql_c)
