misc bugfix for beatmap_db

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(osux C)
 set(CMAKE_MODULE_PATH ${osux_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
 
+add_definitions(-DDEBUG=1)
 add_subdirectory(src)
 
 # stackoverflow.com/questions/8934295/
