--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -2,17 +2,19 @@
 add_executable(parse_replay parse_replay.c)
 target_link_libraries(parse_replay osux)
 
-add_executable(makedb makedb.c)
-target_link_libraries(makedb osux)
+# add_executable(makedb makedb.c)
+# target_link_libraries(makedb osux)
 
-add_executable(readdb readdb.c)
-target_link_libraries(readdb osux )
+# add_executable(readdb readdb.c)
+# target_link_libraries(readdb osux )
+
+add_subdirectory( dbctl )
 
 add_executable(taiko_converter taiko_converter.c)
 target_link_libraries(taiko_converter osux )
 
 install( 
-     TARGETS parse_replay makedb readdb taiko_converter
+     TARGETS parse_replay taiko_converter  #makedb readdb
      RUNTIME DESTINATION bin
 #     DESTINATION "${ASSIMP_BIN_INSTALL_DIR}" COMPONENT assimp-dev
 ) 
