--- a/src/tools/dbctl/CMakeLists.txt
+++ b/src/tools/dbctl/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(dbctl dbctl.c cmdline.c)
 target_link_libraries(dbctl osux)
+add_sanitizers(dbctl)
 
 install( 
      TARGETS dbctl
