--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/common.mk
 SUBDIRS = util beatmap mod database replay
 
 lib_LTLIBRARIES = libosux.la
-libosux_la_SOURCES = dummy.c
+libosux_la_SOURCES =
 libosux_la_LIBADD = \
 	util/libosux_util.la \
 	beatmap/libosux_beatmap.la \
