parse replay and beatmap parser minor improvements

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ set(Python_ADDITIONAL_VERSIONS "2.7")
 find_package(PythonLibs REQUIRED)
 find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
-find_package(GLIB COMPONENTS gmodule REQUIRED )
+find_package(GLIB COMPONENTS gmodule gio gobject REQUIRED )
 find_package(GTS REQUIRED)
 find_package(LibLZMA REQUIRED)
 find_package(LibYAML REQUIRED)
