--- a/src/taikorank/yaml/config.yaml
+++ b/src/taikorank/yaml/config.yaml
@@ -1,5 +1,16 @@
+##################### GLOBAL #######################
 ### Autoconvert
-enable_autoconvert: 1
+autoconvert_enable: 1
+
+### Database
+db_enable: 0
+db_ip:     localhost
+db_login:  root
+db_passwd: NOPE
+
+### osux db
+osuxdb_enable: 0
+osuxdb_path:   ./osuxdb
 
 ### Print
 print_tro:  0
@@ -21,6 +32,7 @@ print_order: FDRPA
 # P -> pattern
 # A -> accuracy
 
+##################### LOCAL #######################
 ### Others
 mods: __
 # no space between mods (ex: DTHR), use __ for no mod
@@ -28,20 +40,6 @@ flat: 0
 # change D to d, etc
 no_bonus: 0
 # remove bonus objects
-
-### osux db
-osuxdb_state: 0
-# b -> build
-# l -> load
-# other -> nothing
-osuxdb_path:     ./osuxdb
-osuxdb_song_dir: ./bb_maps/
-
-### Database
-database:  0
-db_ip:     localhost
-db_login:  root
-db_passwd: NOPE
 
 ### Score
 score:        0
