--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ PKG_CHECK_MODULES([GLIB], [glib-2.0])
 PKG_CHECK_MODULES([GMODULE], [gmodule-2.0])
 PKG_CHECK_MODULES([GIO], [gio-2.0])
 PKG_CHECK_MODULES([GOBJECT], [gobject-2.0])
+PKG_CHECK_MODULES([GTK3], [gtk+-3.0])
 PKG_CHECK_MODULES(GTS, gts >= 0.7.2, ,
                        [AC_CHECK_PROG(GTS_CONFIG, gts-config,
                        gts-config, false)
@@ -54,6 +55,7 @@ AC_CONFIG_FILES([
                   src/tools/dbctl/Makefile
 		  src/taikorank/Makefile
 		  src/taikorank/yaml/Makefile
+		  src/editor/Makefile
                ])
 
 AC_CONFIG_SUBDIRS([])
