--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(Threads REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(GLIB COMPONENTS gmodule gio gobject REQUIRED )
 find_package(GTS REQUIRED)
+find_package(GTK3 REQUIRED)
 find_package(LibLZMA REQUIRED)
 find_package(LibYAML REQUIRED)
 find_package(SQLite3 REQUIRED)
@@ -37,4 +38,4 @@ add_subdirectory(thirdparty)
 add_subdirectory(lib)
 add_subdirectory(tools)
 add_subdirectory(taikorank)
-
+add_subdirectory(editor)
