--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,3 @@
 include $(top_srcdir)/common.mk
 
-SUBDIRS = thirdparty lib tools taikorank
-# SUBDIRS += editor
+SUBDIRS = thirdparty lib tools taikorank editor
